--- a/Practice/loginform.html
+++ b/Practice/loginform.html
@@ -14,7 +14,8 @@
         <!--Add the minlength and maxlength attributes to the input fields-->
         <label for="username">Username:</label>
         <br>
-        <input id="username" name="username" type="text" required minlength="3" maxlength ="15">
+        <!-- Now adding pattern attribute to make sure users only enter alphanumeric usernames with no special characters like @#!$% -->
+        <input id="username" name="username" type="text" required minlength="3" maxlength ="15" pattern="[a-zA-Z0-9]+">
         <br>
         <label for="pw">Password:</label>
         <br>
