--- a/Practice/5-Semantics.html
+++ b/Practice/5-Semantics.html
@@ -9,7 +9,15 @@
           <li><a href="#posts">Posts</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-    </nav>
+      </nav>
     </header>
+    <div id="main">
+      <p>This is where the main content will go once the page is built out!</p>
+    </div>
+    
+    <div id="footer">
+      <p>Contact me at +1 234 567 8910 </p>
+    </div>
+    
   </body>
 </html>
