--- a/Practice/5-Semantics.html
+++ b/Practice/5-Semantics.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <title>Required</title>
+        <link rel="stylesheet" href="style.css" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+        <script type="text/javascript" src="login.js" defer></script>
+      </head>
   <body>
     <header>
       <h1>Navigational Links</h1>
