--- a/Practice/html/Welcome.html
+++ b/Practice/html/Welcome.html
@@ -31,5 +31,8 @@
     <h2>This is an unstyled classed heading</h2>
     <p>We will see if this section will not be affected since it is not nested under any class.</p>
 </div>
+
+<!-- However I can apply to this seperate paragraph or any other element as I please by stating the class-->
+ <p class="allheadings">This is a paragraph with the style aapplied to it</p>
 </body>
 </html>
