--- a/Practice/cssentry/services_prices.html
+++ b/Practice/cssentry/services_prices.html
@@ -3,27 +3,38 @@
     <head>
         <title>Dyse Unlimited Services & Prices</title>
         <meta charset="utf-8">
-        <style>
-            h1, h2, h5 {
-                text-align: center;
-            }
-
-        </style>
+        <!-- This code makes the styling of the page to look similar on mobile as it does on a desktop or laptop-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <!-- link tag to reference out stylesheet css file location and specify the relationship with out file which is a stylesheet-->
+        <link href="/cssentry/servicespricesstyle.css" rel="stylesheet">
+       
     </head>
 
     <body>
+        <div id="services">
         <main>
             <h1>Dyse Unlimited Services</h1>
             <h5>An all in one web & media solutions portfolio</h5>
 
             <section>
                 <h2>Photography</h2>
+                <!-- Time to add content of services and prices in an article-->
+                <article>
+
+                </article>
             </section>
 
-
-
+<section class="services2">
+    <section>
+        <h2>Graphics</h2>
+        <article>
+                    
+        </article>
+    </section>
+</section>
 
         </main>
+        </div>
     </body>
 
     <footer>
