Added items inline

--- a/Practice/cssentry/services_prices.html
+++ b/Practice/cssentry/services_prices.html
@@ -19,9 +19,28 @@
             <section>
                 <h2>Photography</h2>
                 <!-- Time to add content of services and prices in an article-->
-                <article>
-
+                <article  class="oneline">
+                    <!-- To align services to the left and prices to the right lets add classes for that format to them. Class "service" and "price"-->
+                    <p class="service">Studio Portraits/Hr</p>
+                    <p class="price">50.00</p>
                 </article>
+                <!-- To make the both p's appear on the same line we change their block level nature by adding a class to the article that defines elements inside of them, the 2 paragraphs-->
+                <article class="oneline">
+                    <p>Outdoor Portraits/Hr</p>
+                    <p>65.00</p>
+                  </article>
+                  <article>
+                    <p>Event & Parties/Hr</p>
+                    <p>60.00</p>
+                  </article>
+                  <article>
+                    <p>Product Photography</p>
+                    <p>120.00</p>
+                  </article>
+                  <article>
+                    <p>Coperate Photography/Hr</p>
+                    <p>80.00</p>
+                  </article>
             </section>
 
 <section class="services2">
