Further css additions
Many additions I cant keep track of.

--- a/Practice/html/Welcome.html
+++ b/Practice/html/Welcome.html
@@ -7,88 +7,7 @@
     <!-- Lets add a general CSS class with simple formating then reference it in the body
      So this is the style so you have to create a style tag and add it into the header since it is universal to the page
     -->
-    <style>
-        .welcomeremarks{
-            align-content: center;
-            padding: 10px 60px;
-            text-align: center;
-        }
-        /* All headings to have the same colour under this class */
-        .headings{
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: brown;
-            background-color: azure;
-            padding: 5px;
-        }
-        .welcomeheader{
-            font-size: 35px;
-        }
-
-        /* Background for fun */
-        #bckgrnd{
-            background-color: darkkhaki;
-            padding: 20px;
-        }
-        /* Header/Menu Area to have the following style */
-        header{
-            background-color: #ffffff;
-            font-weight: bold;
-            display: flex; /* Aligns image and nav links inline */
-            justify-content: space-between; /* Space between logo and nav links */
-            align-items: center; /* Vertically aligns items */
-            padding: 10px 20px;
-            border-style: solid;
-            border-color: rgb(236, 236, 236);
-            border-radius: 10px;
-            border-top: 0px;
-            border-left: 0px;
-            border-right: 0px;
-              }
-
-      .logo {
-        height: 50px; /* Adjust size of the logo */
-      }
-
-      nav ul {
-        list-style-type: none; /* Remove bullet points */
-        display: flex; /* Make the list horizontal */
-        gap: 30px; /* Spacing between items */
-        padding: 0;
-        margin: 0;
-      }
-
-      nav ul li a {
-        text-decoration: none;
-        color: black;
-        font-size: 18px;
-      }
-
-      nav ul li a:hover {
-        color: rgb(252, 13, 13);
-        
-      }
-
-      .imagelogos{
-        width: 200px;
-        display:flex;
-        gap: 50px;
-        align-items: center;
-              }
-
-    .formcontainer{
-      background-color: rgb(245, 245, 245);
-      border-radius: 10px;
-      padding: 20px;
-      border-style: solid;
-      border-width: 2px;
-      border-color: rgb(214, 214, 214);
-            
-    }
-/* trying to make the submit button have a hover color... maybe later
-    input[type="submit"]: hover{
-background-color: tomato;
-    }*/
-   </style>
+    <link href="/stylesheet.css" rel="stylesheet">
 </head>
 
 <header class="header">
@@ -257,7 +176,7 @@ background-color: tomato;
         <tr>
           <td>&copy; Dyse Unlimited</td>
           <td>&reg;2024</td>
-          <td>Contact Us</td>
+          <td><a href="https://sites.google.com/view/dyseunlimited/contact-us">Contact Us</a></td>
         </tr>
       </table>
     </div>
