Css not picking

--- a/Practice/cssentry/services_prices.html
+++ b/Practice/cssentry/services_prices.html
@@ -6,7 +6,7 @@
         <!-- This code makes the styling of the page to look similar on mobile as it does on a desktop or laptop-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <!-- link tag to reference out stylesheet css file location and specify the relationship with out file which is a stylesheet-->
-        <link href="/cssentry/servicespricesstyle.css" rel="stylesheet">
+        <link href="/servicespricesstyle.css" rel="stylesheet">
        
     </head>
 
