--- a/Practice/cssentry/services_prices.html
+++ b/Practice/cssentry/services_prices.html
@@ -11,52 +11,59 @@
     </head>
 
     <body>
-        <div id="services">
+        <div class="services">
         <main>
             <h1>Dyse Unlimited Services</h1>
-            <h5>An all in one web & media solutions portfolio</h5>
-
+            <h5 class="ai1">An all in one web & media solutions portfolio</h5>
+            <hr>
             <section>
                 <h2>Photography</h2>
+                <img src="/images/Dyse_Photography-removebg-preview.png" alt="Dyse Unlimited Photography Logo" width=" 150px">
+                <!-- Add a photography icon underneath. expect it to align to the far left because images are inline elements. The image you added is not centered horizontally, img elements are "like" inline elements. They need to be changed to block elements using margin attributes in css-->               
                 <!-- Time to add content of services and prices in an article-->
                 <article  class="oneline">
                     <!-- To align services to the left and prices to the right lets add classes for that format to them. Class "service" and "price"-->
-                    <p class="service">Studio Portraits/Hr</p>
-                    <p class="price">50.00</p>
+                    <p class="photography">Studio Portraits/Hr</p><p class="price">50.00</p>
                 </article>
                 <!-- To make the both p's appear on the same line we change their block level nature by adding a class to the article that defines elements inside of them, the 2 paragraphs-->
                 <article class="oneline">
-                    <p>Outdoor Portraits/Hr</p>
-                    <p>65.00</p>
+                    <p class="photography">Outdoor Portraits/Hr</p><p class="price">65.00</p>
                   </article>
-                  <article>
-                    <p>Event & Parties/Hr</p>
-                    <p>60.00</p>
+                  <article class="oneline">
+                    <p class="photography">Event & Parties/Hr</p><p class="price">60.00</p>
                   </article>
-                  <article>
-                    <p>Product Photography</p>
-                    <p>120.00</p>
+                  <article class="oneline">
+                    <p class="photography">Product Photography</p><p class="price">120.00</p>
                   </article>
-                  <article>
-                    <p>Coperate Photography/Hr</p>
-                    <p>80.00</p>
+                  <article class="oneline">
+                    <p class="photography">Coperate Photography/Hr</p><p class="price">80.00</p>
                   </article>
             </section>
 
-<section class="services2">
-    <section>
+<section class="services">
+    <section id="services2">
         <h2>Graphics</h2>
-        <article>
-                    
+        <img src="/images/Dyse_Graphics1-removebg-preview.png" alt="Dyse Unlimited Photography Logo" width=" 150px"> 
+        <article class="oneline">
+            <p class="graphics">Brand UX UI</p><p class="price">65.00</p>
+        </article>
+        <article class="oneline">
+          <p class="graphics">Prints</p><p class="price">60.00</p>
+        </article>
+        <article class="oneline">
+          <p class="graphics">Consultation</p><p class="price">120.00</p>
+        </article>
+        <article class="oneline">
+          <p class="graphics">Digital Design</p><p class="price">80.00</p>
         </article>
     </section>
 </section>
 
         </main>
+        <hr class="footerline">
+        <footer>
+            <p class="portfolio"><a href="https://github.com/nigelzenda" target="_blank">Portfolio</a></p>         
+        </footer>
         </div>
     </body>
-
-    <footer>
-
-    </footer>
 </html>
